# ring-proof

./: Cargo.toml
.github/workflows/: rust.yml
evm-vrfier/: Cargo.toml
pasta-tree/: Cargo.toml
pasta-tree/src/: ipa_hiding.rs  lib.rs  prover.rs  verifier.rs
pasta-tree/src/auth_path/: blinded.rs  mod.rs  node.rs  path.rs
pasta-tree/src/circuit/: mod.rs  params.rs  prover.rs  verifier.rs
pasta-tree/src/circuit2/: mod.rs  params.rs  prover.rs  verifier.rs
pasta-tree/src/circuit_fat/: mod.rs  params.rs  prover.rs  verifier.rs
pasta-tree/src/circuit_tall/: mod.rs  params.rs  prover.rs  verifier.rs
pasta-tree/src/level/: mod.rs  prover.rs  verifier.rs
w3f-plonk-common/: Cargo.toml
w3f-plonk-common/benches/: SUMMARY.md  plonk_common.rs
w3f-plonk-common/src/: batch.rs  domain.rs  kzg_acc.rs  lib.rs  piop.rs  prover.rs  q_chunking.rs  verifier.rs
w3f-plonk-common/src/gadgets/: booleanity.rs  column_sum.rs  equal_cells.rs  fixed_cells.rs  inner_prod.rs  inner_prod_inv.rs  mod.rs
w3f-plonk-common/src/gadgets/ec/: mod.rs  sw_cond_add.rs  te_cond_add.rs  te_doubling.rs
w3f-ring-proof/: Cargo.toml
w3f-ring-proof/benches/: SUMMARY.md  ring_proof.rs
w3f-ring-proof/examples/: export_sample_ring_proof.rs
w3f-ring-proof/src/: lib.rs  multi_ring_batch_verifier.rs  ring.rs  ring_prover.rs  ring_verifier.rs
w3f-ring-proof/src/piop/: mod.rs  params.rs  prover.rs  verifier.rs
w3f-ring-vrf-snark/: Cargo.toml
w3f-ring-vrf-snark/src/piop/: mod.rs  verifier.rs
