[workspace]
resolver = "2"
members = [
    # "evm-vrfier",
    "w3f-plonk-common",
    "w3f-ring-proof",
    "w3f-ring-vrf-snark",
    "pasta-tree",
]

[workspace.dependencies]
#w3f-plonk-common = { version = "0.0.6", default-features = false }
w3f-plonk-common = { path = "w3f-plonk-common", default-features = false }
#w3f-pcs = { version = "0.0.5", default-features = false }
#w3f-pcs = { git = "https://github.com/paritytech/fflonk", branch = "ipa-pcs", default-features = false }
w3f-pcs = { path = "../fflonk", default-features = false }
ark-transcript = { version = "0.0.3", default-features = false }

ark-std = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-ec = { version = "0.5", default-features = false }
ark-poly = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false, features = ["derive"] }
ark-bls12-381 = { version = "0.5", default-features = false, features = ["curve"] }
ark-ed-on-bls12-381-bandersnatch = { version = "0.5", default-features = false }

rayon = { version = "1", default-features = false }
blake2 = { version = "0.10", default-features = false }
criterion = { version = "0.5", features = ["html_reports"] }
getrandom_or_panic = { version = "0.0.3", default-features = false }
rand_core = "0.6"
